<resources>
    <string name="app_name">VkTask2024</string>

    <string name="search_results">"Results for \"%1$s\""</string>
    <string name="category_results">"Category: %1$s"</string>

    <string name="item_title_sample">ITEM TITLE SAMPLE</string>
    <string name="item_description_sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="new_price_sample">$1337.0</string>
    <string name="old_price_sample">$7331.0</string>
    <string name="discount_sample">52%</string>
    <string name="product_rating_sample">3.33</string>
    <string name="button_add_to_cart">Add to Cart</string>
    <string name="hint_search">Search</string>
    <string name="search_result_sample">Results for \"\"</string>

    <string name="null_description" />
    <string name="button_category_menu_description">category menu</string>
    <string name="button_reset_search_description">reset search</string>
    <string name="button_search_description">search button</string>
    <string name="button_reset_category_description">reset category</string>
</resources>